--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
   "git.autofetch": true,
   "git.confirmSync": false,
   "editor.semanticHighlighting.enabled": true,
+  "cloudcode.autoDependencies": "off",
+  "cloudcode.project": "arrigo-lupori-v0",
+  "explorer.confirmDragAndDrop": false,
   "[jsonc]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
@@ -10,6 +13,9 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[dockercompose]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
